# bitcoin-y

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  build.rs  tt.py
docs/: 交易序列化.md  序列化.md  比特币脚本系统核心摘要.md  笔记-序列化.md  笔记-脚本系统.md
proto/: block.proto  transaction.proto
proto_gen/: core.rs
src/: block.rs  codec.rs  cons.rs  db.rs  errors.rs  hash.rs  key.rs  lib.rs  main.rs  pow.rs  script.rs  temp.rs  transaction.rs  tx.rs  uint256.rs  utils.rs
src/proto/: block.proto  transaction.proto
src/script/: consts.rs  error.rs  interpreter.rs  opcode.rs  parser.rs  verify.rs
tests/: codec_test.rs  hash_test.rs  key_tests.rs  nbit_test.rs  opcode_test.rs  script_parse_test.rs  uint256_test.rs
