[package]
name = "bitcoin-y"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["std", "rand", "hashes"] }
hex = "0.4.3"
rand = { version = "0.9.2" }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
once_cell = "1.10.0"
anyhow = { version = "1.0.100", features = ["default"] }
ripemd = "0.1.3"
bs58 = "0.5.0"
sha2 = "0.10.9"
thiserror = "2.0"
