[package]
name = "bitcoin-y"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["std", "rand", "hashes"] }
hex = "0.4.3"
rand = { version = "0.10.0" }
ripemd = "0.2.0"
bs58 = "0.5.0"
sha2 = "0.11.0"
thiserror = "2.0"
tokio = {version = "1.50.0",features = ["full"]}
rusqlite = "0.39.0"
log = "0.4.29"
env_logger = "0.11.10" 